--- a/frontend/viewTimetable.html
+++ b/frontend/viewTimetable.html
@@ -21,6 +21,8 @@
 
         .container {
             padding: 20px;
+            max-width: 900px;
+            margin: auto;
         }
 
         table {
@@ -43,7 +45,7 @@
             display: inline-block;
             margin-top: 20px;
             padding: 10px 15px;
-            background-color: #007bff; /* Same color as header */
+            background-color: #007bff; 
             color: white;
             text-decoration: none;
             border-radius: 5px;
@@ -51,18 +53,18 @@
         }
 
         .back-to-dashboard:hover {
-            background-color: #0056b3; /* Darker shade for hover effect */
+            background-color: #0056b3; 
         }
 
         #loading {
-            display: none; /* Hidden by default */
+            display: none; 
             margin-top: 10px;
             font-weight: bold;
             color: #007bff;
         }
 
         #message {
-            color: red; /* For error messages */
+            color: red; 
             font-weight: bold;
             margin-top: 10px;
         }
@@ -74,8 +76,8 @@
     </div>
 
     <div class="container">
-        <div id="loading">Loading timetable...</div> <!-- Loading indicator -->
-        <div id="message"></div> <!-- Error message display -->
+        <div id="loading">Loading timetable...</div>
+        <div id="message"></div>
         <table id="timetableList">
             <thead>
                 <tr>
@@ -92,54 +94,64 @@
             </tbody>
         </table>
 
-        <a href="admindashboard.html" class="back-to-dashboard">Back to Dashboard</a> <!-- Link back to admin dashboard -->
+        <a href="admindashboard.html" class="back-to-dashboard">Back to Dashboard</a>
     </div>
 
     <script>
         // Check if the token exists; if not, redirect to the login page
         function checkLogin() {
-            const token = sessionStorage.getItem('token');
+            const token = sessionStorage.getItem('token'); // Get token from session storage
+            console.log('Token during login check:', token); // Debugging line
             if (!token) {
+                alert("You are not logged in. Redirecting to login page.");
                 window.location.href = 'adminLogin.html'; // Redirect if not logged in
             }
         }
 
         // Fetch timetable list from the API
         async function fetchTimetable() {
-            const token = sessionStorage.getItem('token'); // Retrieve JWT token from session storage
+            const token = sessionStorage.getItem('token'); // Get the token from session storage
+            console.log('Token when fetching timetable:', token); // Debugging line
 
-            document.getElementById('loading').style.display = 'block';  // Show loading message
-            document.getElementById('message').textContent = ''; // Clear previous messages
+            document.getElementById('loading').style.display = 'block';  
+            document.getElementById('message').textContent = '';
 
             try {
-                const response = await fetch('http://localhost:9000/api/admin/timetable', {
+                const response = await fetch('http://localhost:9000/api/timetable/timetable', {
                     method: 'GET',
                     headers: {
                         'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${token}` // Include the token in the Authorization header
+                        'Authorization': `Bearer ${token}` // Include token in request headers
                     }
                 });
 
+                // Handle unauthorized access
                 if (response.status === 401) {
-                    throw new Error('Unauthorized access. Please log in again.');
+                    alert('Session expired. Please log in again.');
+                    sessionStorage.removeItem('token'); // Clear expired token
+                    window.location.href = 'adminLogin.html'; // Redirect if 401
+                    return;
                 }
+
+                // Check for other errors
                 if (!response.ok) {
                     throw new Error(`Error: ${response.status} - ${response.statusText}`);
                 }
+
                 const data = await response.json();
                 const timetableTable = document.getElementById('timetableList').getElementsByTagName('tbody')[0];
-                timetableTable.innerHTML = ''; // Clear existing data
+                timetableTable.innerHTML = '';
 
                 // Populate the table with timetable data
                 if (data.data && data.data.length > 0) {
                     data.data.forEach(entry => {
                         const row = timetableTable.insertRow();
-                        row.insertCell(0).innerText = entry.class_id; // Display Class ID
-                        row.insertCell(1).innerText = entry.teacher_id; // Display Teacher ID
-                        row.insertCell(2).innerText = entry.day_of_week; // Display Day of the Week
-                        row.insertCell(3).innerText = entry.start_time; // Display Start Time
-                        row.insertCell(4).innerText = entry.end_time; // Display End Time
-                        row.insertCell(5).innerText = entry.location; // Display Location
+                        row.insertCell(0).innerText = entry.class_id;
+                        row.insertCell(1).innerText = entry.teacher_id;
+                        row.insertCell(2).innerText = entry.day_of_week;
+                        row.insertCell(3).innerText = entry.start_time;
+                        row.insertCell(4).innerText = entry.end_time;
+                        row.insertCell(5).innerText = entry.location;
                     });
                 } else {
                     document.getElementById('message').textContent = "No timetable entries found.";
