--- a/frontend/viewAttendance.html
+++ b/frontend/viewAttendance.html
@@ -43,7 +43,7 @@
             display: inline-block;
             margin-top: 20px;
             padding: 10px 15px;
-            background-color: #007bff; /* Same color as header */
+            background-color: #007bff; 
             color: white;
             text-decoration: none;
             border-radius: 5px;
@@ -51,18 +51,18 @@
         }
 
         .back-to-dashboard:hover {
-            background-color: #0056b3; /* Darker shade for hover effect */
+            background-color: #0056b3; 
         }
 
         #loading {
-            display: none; /* Hidden by default */
+            display: none; 
             margin-top: 10px;
             font-weight: bold;
             color: #007bff;
         }
 
         #message {
-            color: red; /* For error messages */
+            color: red; 
             font-weight: bold;
             margin-top: 10px;
         }
@@ -74,8 +74,8 @@
     </div>
 
     <div class="container">
-        <div id="loading">Loading attendance...</div> <!-- Loading indicator -->
-        <div id="message"></div> <!-- Error message display -->
+        <div id="loading">Loading attendance...</div>
+        <div id="message"></div>
         <table id="attendanceList">
             <thead>
                 <tr>
@@ -91,13 +91,13 @@
             </tbody>
         </table>
 
-        <a href="admindashboard.html" class="back-to-dashboard">Back to Dashboard</a> <!-- Link back to admin dashboard -->
+        <a href="admindashboard.html" class="back-to-dashboard">Back to Dashboard</a>
     </div>
 
     <script>
         // Check if the token exists; if not, redirect to the login page
         function checkLogin() {
-            const token = sessionStorage.getItem('token');
+            const token = localStorage.getItem('token'); // Retrieve token from localStorage
             if (!token) {
                 window.location.href = 'adminLogin.html'; // Redirect if not logged in
             }
@@ -105,13 +105,13 @@
 
         // Fetch attendance list from the API
         async function fetchAttendance() {
-            const token = sessionStorage.getItem('token'); // Retrieve JWT token from session storage
+            const token = localStorage.getItem('token'); // Retrieve JWT token from localStorage
 
             document.getElementById('loading').style.display = 'block';  // Show loading message
             document.getElementById('message').textContent = ''; // Clear previous messages
 
             try {
-                const response = await fetch('http://localhost:9000/api/attendance/attendance', {
+                const response = await fetch('http://localhost:9000/api/attendance/records', {
                     method: 'GET',
                     headers: {
                         'Content-Type': 'application/json',
@@ -155,7 +155,7 @@
         // Call functions on page load
         window.onload = function() {
             checkLogin(); // Check if logged in
-            fetchAttendance(); // Load attendance when the page is ready
+            fetchAttendance(); // Load attendance when page is ready
         };
     </script>
 </body>
